add DOI for Macrel paper instead of 'in press'

--- a/software/macrel/index.html
+++ b/software/macrel/index.html
@@ -7797,7 +7797,7 @@ var author$project$Main$intro = A2(
 							_List_Nil,
 							_List_fromArray(
 								[
-									elm$html$Html$text('MACREL: antimicrobial peptide screening in genomes and metagenomes. Celio Dias Santos-Junior, Shaojun\n                                   Pan, Xing-Ming Zhao, Luis Pedro Coelho. The PeerJ (in press).')
+									elm$html$Html$text('MACREL: antimicrobial peptide screening in genomes and metagenomes. Celio Dias Santos-Junior, Shaojun\n                                   Pan, Xing-Ming Zhao, Luis Pedro Coelho. The PeerJ (8): e10555, 2020. DOI: 10.7717/peerj.10555.')
 								]))
 						]))
 				]))
